home/namespaced/media/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: services
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - name: plex
        image: docker.io/plexinc/pms-docker:1.40.1.8227-c0dd5a73e
        ports:
        - containerPort: 32400
          protocol: TCP
        - containerPort: 3005
          protocol: TCP
        - containerPort: 8324
          protocol: TCP
        - containerPort: 32469
          protocol: TCP
        - containerPort: 1900
          protocol: UDP
        - containerPort: 32410
          protocol: UDP
        - containerPort: 32412
          protocol: UDP
        - containerPort: 32413
          protocol: UDP
        - containerPort: 32414
          protocol: UDP
        - containerPort: 5353
          protocol: UDP
        volumeMounts:
        - mountPath: /config
          name: plex-config
        - mountPath: /data/media
          name: media
      - name: samba
        image: quay.io/samba.org/samba-server
        ports:
        - containerPort: 445
        volumeMounts:
        - mountPath: /share
          name: media
      - name: transmission
        image: images.home.mtaylor.io/transmission:latest
        ports:
        - containerPort: 9091
          protocol: TCP
        - containerPort: 51413
          protocol: TCP
        - containerPort: 51413
          protocol: UDP
        volumeMounts:
        - mountPath: /config
          name: transmission-config
        - mountPath: /downloads
          name: media
      restartPolicy: Always
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
      - name: plex-config
        persistentVolumeClaim:
          claimName: plex-config
      - name: transmission-config
        persistentVolumeClaim:
          claimName: transmission-config
