home/namespaced/media/virtualservices.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: plex
spec:
  gateways:
  - istio-gateways/home-mtaylor-io
  hosts:
  - plex.home.mtaylor.io
  http:
  - name: plex-routes
    route:
    - destination:
        host: plex-web.media.svc.cluster.local
        port:
          number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: transmission
spec:
  gateways:
  - istio-gateways/home-mtaylor-io
  hosts:
  - transmission.home.mtaylor.io
  http:
  - name: transmission-routes
    route:
    - destination:
        host: transmission-webui.media.svc.cluster.local
        port:
          number: 80
